# CommunityDetection

./: .gitignore  README.md  survey_of_tools.md
Benchmark2009/binary_networks/: ._makefile
Benchmark2009/directed_networks/: ._makefile
Benchmark2009/weighted_directed_nets/: ._makefile
Benchmark2009/weighted_networks/: ._Thanks.txt
dataset/: .gitignore  measurement.txt
dataset/description/: fileNamingFormat.txt  measurement.txt
dataset/small/: z_measurement_sum.txt
dataset1/: .gitignore
presentation/visio/: Common Neighbour Influence.vsdx  Direct Influence.vsdx  (+7 more)
questions/: New Text Document.txt  Questions.doc
shellscripts/: changeSyntheticName.sh  fileExplorer.sh  mvFiles.sh  recursiveRunAttractor.sh  recursiveRunAttractorImproveBoth.sh  recursiveRunAttractorImproveEIComp.sh  recursiveRunAttractorRemoveTail.sh  recursiveRunAttractrol.sh  recursiveRunInfomap.sh  recursiveRunLouvain.sh  recursiveRunMCL.sh  recursiveRunMCLTuning  recursiveRunMetis.sh  removeFiles.sh  runFourAlg.sh  test1.sh  test2.sh
src/: CMakeLists.txt
src/CSharp/: Program.cs
src/CompareAlgorithms/Infomap/Infomap/: ChangeFormat.py  Infomap
src/CompareAlgorithms/Infomap/Infomap/big/collaboration/: CA-HepTh.txt
src/CompareAlgorithms/Louvain/: hierarchy  main_hierarchy.cpp
src/CompareAlgorithms/Mcl/: CMakeLists.txt  Makefile  README
src/CompareAlgorithms/Mcl/doc/: Makefile
src/CompareAlgorithms/Mcl/graphs/: Makefile
src/CompareAlgorithms/Mcl/img/: Makefile
src/CompareAlgorithms/Mcl/src/: Makefile
src/CompareAlgorithms/Mcl/src/clew/: Makefile
src/CompareAlgorithms/Mcl/src/clew/.deps/: scan.Po
src/CompareAlgorithms/Mcl/src/gryphon/.deps/: path.Po
src/CompareAlgorithms/Mcl/src/mcl/: Makefile
src/CompareAlgorithms/Mcl/src/mcl/.deps/: dpsd.Po  transform.Po
src/CompareAlgorithms/Mcl/src/shcl/.deps/: clminfo2.Po  report.Po
src/CompareAlgorithms/Mcl/src/shmx/: Makefile
src/CompareAlgorithms/Mcl/src/shmx/.deps/: mcxassemble.Po  mcxmetric.Po
src/CompareAlgorithms/Mcl/testing/blast/: Makefile
src/CompareAlgorithms/Mcl/util/.deps/: ding.Po  err.Po  hash.Po  ting.Po  tr.Po
src/Compared_Algorithms/Infomap/Infomap/: .hgtags
src/Compared_Algorithms/Infomap/Infomap/big/collaboration/: mod.txt
src/Compared_Algorithms/Infomap/Infomap/output/: ninetriangles.map
src/Compared_Algorithms/Mcl/include/: Makefile
src/Compared_Algorithms/Mcl/src/impala/: Makefile
src/Compared_Algorithms/Mcl/src/impala/.deps/: compose.Po  io.Po  pval.Po  vector.Po
src/Compared_Algorithms/Mcl/src/mcl/.deps/: alg.Po  proc.Po
src/Compared_Algorithms/Mcl/src/shcl/: Makefile  clm
src/Compared_Algorithms/Mcl/src/shcl/.deps/: clmorder.Po
src/Compared_Algorithms/Mcl/src/shmcl/: Makefile
src/Compared_Algorithms/Mcl/src/shmcx/: Makefile
src/Compared_Algorithms/Mcl/src/shmcx/.deps/: mcxi.Po
src/Compared_Algorithms/Mcl/src/shmcxquery/: Makefile
src/Compared_Algorithms/Mcl/src/shmx/: mcxminusmeet  mcxsubs
src/Compared_Algorithms/Mcl/src/shmx/.deps/: mcxdiameter.Po  mcxmm.Po  mcxquery.Po  mcxrand.Po  mcxsubs.Po
src/Compared_Algorithms/Mcl/util/.deps/: equate.Po
src/DynamicDistance/: CMakeLists.txt  ClusteringEvaluation.cpp  ClusteringEvaluation.h  CommunityDetection.cpp  CommunityDetection.h  Graph.cpp  Graph.h  Helper.cpp  Helper.h  Main.cpp  MetisInputPreProcess.cpp
src/Dynamic_Distance/: Helper.cpp  README.txt
src/Experiment/: TestMain.cpp  TestMain.h
src/IO/: InfomapOutputProcess.cpp  MetisInputPreProcess.cpp  MetisOutputProcess.cpp
src/Infomap/: CMakeLists.txt
src/Infomap/Infomap/: .hg_archival.txt  test.txt
src/Infomap/Infomap/output/: ninetriangles.bftree  ninetriangles.tree
src/Java/src/ip/: AbstractIP.java  MetisIP.java
src/Java_IO/: .gitignore
src/Louvain/: CMakeLists.txt  community
src/Mcl/: config.h  config.status
src/Mcl/scripts/: Makefile
src/Mcl/src/alien/: Makefile
src/Mcl/src/alien/oxygen/: Makefile
src/Mcl/src/alien/oxygen/doc/: Makefile
src/Mcl/src/alien/oxygen/src/: Makefile
src/Mcl/src/clew/.deps/: cat.Po  claw.Po  clm.Po
src/Mcl/src/gryphon/: Makefile
src/Mcl/src/impala/.deps/: app.Po  edge.Po  matrix.Po  tab.Po  version.Po
src/Mcl/src/mcl/.deps/: expand.Po  inflate.Po  shadow.Po
src/Mcl/src/shcl/: clmformat  clmframe
src/Mcl/src/shcl/.deps/: clm.Po  clmadjust.Po  clmclose.Po  clmdag.Po  clmdist.Po  clmformat.Po  clmframe.Po  clmimac.Po  clminfo.Po  clmmate.Po  clmmeet.Po  clmoptics.Po  clmps.Po  clmresidue.Po
src/Mcl/src/shmcl/: mcl  mclcm
src/Mcl/src/shmcl/.deps/: mcl.Po  mclcm.Po
src/Mcl/src/shmcx/: mcxi
src/Mcl/src/shmcx/.deps/: glob.Po  ops.Po  stack.Po
src/Mcl/src/shmx/: mcxarray  mcxassemble  mcxdump  mcxload  mcxmap  mcxmetric  mcxmm  mcxrand  mcxtest  mcxtest2
src/Mcl/src/shmx/.deps/: mcx.Po  mcxalter.Po  mcxarray.Po  mcxclcf.Po  mcxconvert.Po  mcxdump.Po  mcxerdos.Po  mcxfp.Po  mcxload.Po  mcxmap.Po  mcxtab.Po  mcxtest.Po  mcxtest2.Po
src/Mcl/testing/setops/: Makefile
src/Mcl/testing/stream/: Makefile
src/Mcl/util/: Makefile
src/Mcl/util/.deps/: alloc.Po  array.Po  gralloc.Po  list.Po  opt.Po  rand.Po  tok.Po  types.Po
src/Metis/graphs/: mdual.graph.part.100
src/Python/: EdgeAndTime.ipynb  GraphGenerator.ipynb  barchart_comparision.ipynb  networkx.ipynb  test.py
src/Python/.ipynb_checkpoints/: GraphGenerator-checkpoint.ipynb  oldresultanalysis-checkpoint.ipynb
src/Python/cheyulin/: Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb
src/Python/cheyulin/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  Untitled1-checkpoint.ipynb
src/Shell/: recursiveRunAttractorImproveBoth.sh  recursiveRunLouvain.sh  recursiveRunMCL.sh  removeFiles.sh
src/java_project/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
src/java_project/.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
src/java_project/.metadata/.plugins/org.eclipse.ui.workbench/: workbench.xml  workingsets.xml
src/java_project/src/io/test/: Test.java
src/java_project/src/ip/: AttractorIP.java  InfomapIP.java
src/shellscripts/: changeSyntheticName.sh  runThreeAttractors.sh  test2.sh
(+1667 files in other folders)
