cmake_minimum_required(VERSION 3.3)
project(mcl)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    src/clew/cat.c
    src/clew/cat.h
    src/clew/claw.c
    src/clew/claw.h
    src/clew/clm.c
    src/clew/clm.h
    src/clew/scan.c
    src/clew/scan.h
    src/gryphon/path.c
    src/gryphon/path.h
    src/impala/app.c
    src/impala/app.h
    src/impala/compose.c
    src/impala/compose.h
    src/impala/edge.c
    src/impala/edge.h
    src/impala/iface.c
    src/impala/iface.h
    src/impala/io.c
    src/impala/io.h
    src/impala/ivp.c
    src/impala/ivp.h
    src/impala/ivptypes.h
    src/impala/matrix.c
    src/impala/matrix.h
    src/impala/pval.c
    src/impala/pval.h
    src/impala/stream.c
    src/impala/stream.h
    src/impala/tab.c
    src/impala/tab.h
    src/impala/vector.c
    src/impala/vector.h
    src/impala/version.c
    src/impala/version.h
    src/mcl/alg.c
    src/mcl/alg.h
    src/mcl/dpsd.c
    src/mcl/dpsd.h
    src/mcl/expand.c
    src/mcl/expand.h
    src/mcl/inflate.c
    src/mcl/inflate.h
    src/mcl/interpret.c
    src/mcl/interpret.h
    src/mcl/proc.c
    src/mcl/proc.h
    src/mcl/procinit.c
    src/mcl/procinit.h
    src/mcl/shadow.c
    src/mcl/shadow.h
    src/mcl/transform.c
    src/mcl/transform.h
    src/shcl/clm.c
    src/shcl/clm.h
    src/shcl/clmadjust.c
    src/shcl/clmadjust.h
    src/shcl/clmclose.c
    src/shcl/clmclose.h
    src/shcl/clmdag.c
    src/shcl/clmdist.c
    src/shcl/clmdist.h
    src/shcl/clmformat.c
    src/shcl/clmformat.zmm.h
    src/shcl/clmframe.c
    src/shcl/clmimac.c
    src/shcl/clmimac.h
    src/shcl/clminfo.c
    src/shcl/clminfo.h
    src/shcl/clminfo2.c
    src/shcl/clminfo2.h
    src/shcl/clmmate.c
    src/shcl/clmmate.h
    src/shcl/clmmeet.c
    src/shcl/clmmeet.h
    src/shcl/clmoptics.c
    src/shcl/clmoptics.h
    src/shcl/clmorder.c
    src/shcl/clmorder.h
    src/shcl/clmps.c
    src/shcl/clmps.defs.h
    src/shcl/clmps.h
    src/shcl/clmresidue.c
    src/shcl/clmresidue.h
    src/shcl/report.c
    src/shcl/report.h
    src/shmcl/mcl.c
    src/shmcl/mclcm.c
    src/shmcx/glob.c
    src/shmcx/glob.h
    src/shmcx/mcxi.c
    src/shmcx/ops.c
    src/shmcx/ops.h
    src/shmcx/stack.c
    src/shmcx/stack.h
    src/shmcx/util.c
    src/shmcx/util.h
    src/shmcxquery/mcxquery.c
    src/shmx/mcx.c
    src/shmx/mcx.h
    src/shmx/mcxalter.c
    src/shmx/mcxalter.h
    src/shmx/mcxarray.c
    src/shmx/mcxassemble.c
    src/shmx/mcxclcf.c
    src/shmx/mcxclcf.h
    src/shmx/mcxcollect.c
    src/shmx/mcxcollect.h
    src/shmx/mcxconvert.c
    src/shmx/mcxconvert.h
    src/shmx/mcxdiameter.c
    src/shmx/mcxdiameter.h
    src/shmx/mcxdump.c
    src/shmx/mcxerdos.c
    src/shmx/mcxerdos.h
    src/shmx/mcxfp.c
    src/shmx/mcxfp.h
    src/shmx/mcxload.c
    src/shmx/mcxmap.c
    src/shmx/mcxmetric.c
    src/shmx/mcxminusmeet.c
    src/shmx/mcxmm.c
    src/shmx/mcxquery.c
    src/shmx/mcxquery.h
    src/shmx/mcxrand.c
    src/shmx/mcxsubs.c
    src/shmx/mcxtab.c
    src/shmx/mcxtab.h
    src/shmx/mcxtest.c
    src/shmx/mcxtest2.c
    util/alloc.c
    util/alloc.h
    util/array.c
    util/array.h
    util/compile.h
    util/ding.c
    util/ding.h
    util/equate.c
    util/equate.h
    util/err.c
    util/err.h
    util/getpagesize.h
    util/gralloc.c
    util/gralloc.h
    util/hash.c
    util/hash.h
    util/heap.c
    util/heap.h
    util/inttypes.h
    util/io.c
    util/io.h
    util/let.c
    util/let.h
    util/list.c
    util/list.h
    util/minmax.h
    util/opt.c
    util/opt.h
    util/rand.c
    util/rand.h
    util/ting.c
    util/ting.h
    util/tok.c
    util/tok.h
    util/tr.c
    util/tr.h
    util/types.c
    util/types.h)

add_executable(mcl ${SOURCE_FILES})